CMAKE_MINIMUM_REQUIRED ( VERSION 3.12 )
project( Dragonball VERSION 0.1.0 )

include(CTest)
enable_testing()

SET ( CMAKE_VERBOSE_MAKEFILE false )
SET ( CMAKE_BUILD_TYPE Debug )

ADD_COMPILE_OPTIONS ( -std=c++17 )

SET ( COMM_LINK_LIBRARIES pthread )

SET ( LIBRARIES 
    display
)

FOREACH( LIB IN LISTS LIBRARIES)
    ADD_LIBRARY ( ${LIB} ${LIB}.cpp )
    TARGET_LINK_LIBRARIES ( ${LIB} PRIVATE ${COMM_LINK_LIBRARIES} )
ENDFOREACH()

SET ( TARGET_NAME drgb )
ADD_EXECUTABLE ( ${TARGET_NAME} main.cpp )
TARGET_LINK_LIBRARIES ( ${TARGET_NAME} ${LIBRARIES} )

SET ( CPACK_PROJECT_NAME ${PROJECT_NAME} )
SET ( CPACK_PROJECT_VERSION ${PROJECT_VERSION} )
include(CPack)